--- a/DiceMaster3600/App.xaml
+++ b/DiceMaster3600/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="DiceMaster3600.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DiceMaster3600"
              xmlns:vm="clr-namespace:DiceMaster3600.ViewModel"
              xmlns:view="clr-namespace:DiceMaster3600.View"
              StartupUri="MainWindow.xaml">
@@ -11,8 +10,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="View/Theme/ColoursTheme.xaml"/>
                 <ResourceDictionary Source="View/Theme/FontTheme.xaml"/>
-                <ResourceDictionary Source="View/Theme/MenuButtonTheme.xaml"/>
-                <ResourceDictionary Source="View/Theme/TextBoxTheme.xaml"/>
+                <ResourceDictionary Source="View/Theme/Styles.xaml"/>
+                <ResourceDictionary Source="View/Theme/DiceItemTemplate.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type vm:HomeViewModel}">
