--- a/DiceMaster3600/MainWindow.xaml
+++ b/DiceMaster3600/MainWindow.xaml
@@ -5,19 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:DiceMaster3600.ViewModel"
         xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+        xmlns:h="clr-namespace:DiceMaster3600.View.Helpers"
         mc:Ignorable="d"
         WindowState="Maximized"
         Background="WhiteSmoke">
-    <Window.Resources>
-        <SolidColorBrush x:Key="SidebarBackgroundColor" Color="#4d95dc"/>
-        <SolidColorBrush x:Key="TopBarBackgroundColor" Color="#506165"/>
-        <SolidColorBrush x:Key="PrimaryButtonColor" Color="#f0f1f2"/>
-        <SolidColorBrush x:Key="SecondaryButtonColor" Color="#ffffff"/>
-        <SolidColorBrush x:Key="NegativeBalanceColor" Color="#E74C3C"/>
-        <SolidColorBrush x:Key="TextColor" Color="#333333"/>
-        <SolidColorBrush x:Key="LogoColor" Color="#464c58"/>
-        <SolidColorBrush x:Key="InvoiceBackgroundColor" Color="#ECF0F1"/>
-    </Window.Resources>
 
     <Window.DataContext>
         <vm:MainViewModel/>
@@ -53,10 +44,13 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            
-            <TextBox Style="{StaticResource MeoTextBox}"
+
+            <TextBox Style="{StaticResource PlaceHolderTextBox}"
                      VerticalAlignment="Center"
                      HorizontalAlignment="Left"
+                     h:TextBoxHelpers.PlaceholderText="Search.."
+                     h:TextBoxHelpers.CornerRadius="7"
+                     Width="200"
                      Margin="10"/>
             
             <ComboBox VerticalAlignment="Center" Grid.Column="2" SelectedIndex="0" MinWidth="65" Style="{StaticResource MeoComboBox}">
