--- a/DiceMaster3600/View/Theme/ColoursTheme.xaml
+++ b/DiceMaster3600/View/Theme/ColoursTheme.xaml
@@ -26,5 +26,15 @@
     <SolidColorBrush x:Key="MeoptaBackgroundBrush" Color="{StaticResource MeoptaBackground}"/>
     <SolidColorBrush x:Key="MeoptaDarkerBackgroundBrush" Color="{StaticResource MeoptaDarkerBackground}"/>
     <SolidColorBrush x:Key="MeoptaDarkBackgroundBrush" Color="{StaticResource MeoptaDarkBackground}"/>
+    
+    <!-- Additional SolidColorBrushes for Background Colors -->
+    <SolidColorBrush x:Key="SidebarBackgroundColor" Color="#4d95dc"/>
+    <SolidColorBrush x:Key="TopBarBackgroundColor" Color="#506165"/>
+    <SolidColorBrush x:Key="PrimaryButtonColor" Color="#f0f1f2"/>
+    <SolidColorBrush x:Key="SecondaryButtonColor" Color="#ffffff"/>
+    <SolidColorBrush x:Key="NegativeBalanceColor" Color="#E74C3C"/>
+    <SolidColorBrush x:Key="TextColor" Color="#333333"/>
+    <SolidColorBrush x:Key="LogoColor" Color="#464c58"/>
+    <SolidColorBrush x:Key="InvoiceBackgroundColor" Color="#ECF0F1"/>
 
 </ResourceDictionary>
