--- a/DiceMaster3600/View/Theme/Styles.xaml
+++ b/DiceMaster3600/View/Theme/Styles.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:visualHelpers="clr-namespace:DiceMaster3600.View.Helpers"
                     xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF">
     
     <Style x:Key="CircularButton" TargetType="Button">
@@ -44,27 +45,29 @@
                 <Setter Property="Background" Value="#22202f"/>
             </Trigger>
         </Style.Triggers>
+        
     </Style>
 
-    <Style TargetType="TextBox" x:Key="MeoTextBox">
+    <Style TargetType="TextBox" x:Key="PlaceHolderTextBox" >
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10" 
-                            Width="200" Height="30"
-                            Background="{StaticResource MeoptaLogoWhiteBrush}">
+                    <Border CornerRadius="{Binding Path=(visualHelpers:TextBoxHelpers.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}"                           
+                            Background="{StaticResource MeoptaLogoWhiteBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            Padding="10,0">
                         <Grid>
-                            <Rectangle/>
                             <TextBox Margin="5,0,5,0"
-                                     Text="{TemplateBinding Text}"
-                                     BorderThickness="0"
+                                     Text="{TemplateBinding Text}"                                   
                                      Background="{TemplateBinding Background}"
+                                     BorderThickness="0"
                                      VerticalAlignment="Center"
                                      Padding="5"
                                      Foreground="{StaticResource MeoptaDarkBackgroundBrush}"
                                      x:Name="SearchBox"/>
                             <TextBlock IsHitTestVisible="True" 
-                                       Text="Search.."
+                                       Text="{Binding Path=(visualHelpers:TextBoxHelpers.PlaceholderText), RelativeSource={RelativeSource TemplatedParent}}"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
                                        Margin="10,0,0,0"
@@ -84,6 +87,42 @@
                             </TextBlock>
                         </Grid>
                     </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="PasswordBox" x:Key="PlaceholderPasswordBox">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="PasswordBox">
+                    <Border CornerRadius="5" 
+                        Background="{StaticResource MeoptaLogoWhiteBrush}" 
+                        BorderThickness="1" 
+                        BorderBrush="Black" 
+                        Padding="2">
+                        <Grid>
+                            <!-- TextBlock pro zástupný text -->
+                            <TextBlock x:Name="PlaceholderText" 
+                                   Text="{Binding Path=(visualHelpers:TextBoxHelpers.PlaceholderText), RelativeSource={RelativeSource TemplatedParent}}" 
+                                   VerticalAlignment="Center" 
+                                   HorizontalAlignment="Left" 
+                                   Margin="5,0"
+                                   Foreground="Gray" 
+                                   Visibility="Collapsed" />
+                            <ScrollViewer x:Name="PART_ContentHost" Margin="0" />
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                            <Setter TargetName="PlaceholderText" Property="Visibility" Value="Collapsed"/>
+                        </Trigger>
+                        <Trigger Property="IsKeyboardFocusWithin" Value="False">
+                            <Setter TargetName="PlaceholderText" Property="Visibility" Value="Visible"/>
+                            <Setter Property="Background" Value="{StaticResource MeoptaLogoWhiteBrush}"/>
+                        </Trigger>
+                        <!-- Zde můžete přidat další logiku pro zobrazení/skrytí zástupného textu založenou na obsahu nebo jiných podmínkách -->
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
