--- a/DiceMaster3600/View/EntryForm.xaml
+++ b/DiceMaster3600/View/EntryForm.xaml
@@ -2,20 +2,92 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:h="clr-namespace:DiceMaster3600.View.Helpers"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="EntryForm" Height="600" Width="600">
-    
+        xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+        xmlns:converters="clr-namespace:DiceMaster3600.View.Converters"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        mc:Ignorable="d"  ResizeMode="NoResize" Title="EntryForm" Width="800"  >
+
+    <Window.Resources>
+        <converters:BooleanToBrushConverter x:Key="GenderBrushConverter" TrueBrush="Black" FalseBrush="LightGray"/>
+        
+        <Style x:Key="BaseTextBlockStyle" TargetType="TextBlock">
+            <Setter Property="Margin" Value="0,10,0,0"/>
+            <Setter Property="Foreground" Value="{StaticResource MeoptaBackgroundBrush}"/>
+        </Style>
+
+        <Style x:Key="BaseTextBoxStyle" TargetType="TextBox">
+            <Setter Property="Width" Value="380"/>
+            <Setter Property="Height" Value="25"/>
+            <Setter Property="BorderThickness" Value="0,0,0,1"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+
+        <Style x:Key="GenderEllipseStyle" TargetType="Ellipse">
+            <Setter Property="Width" Value="30"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="BaseButtonStyle" TargetType="Button">
+            <Setter Property="Padding" Value="10,5"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="Medium"/>
+            <Setter Property="Width" Value="120"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="4">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          Margin="{TemplateBinding Padding}"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="CancelButtonStyle" TargetType="Button" BasedOn="{StaticResource BaseButtonStyle}">
+            <Setter Property="Background" Value="#f6f7f9"/>
+            <Setter Property="Foreground" Value="Black"/>
+        </Style>
+
+        <Style x:Key="SaveButtonStyle" TargetType="Button" BasedOn="{StaticResource BaseButtonStyle}">
+            <Setter Property="Background" Value="#60e6c4"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
-        <Image></Image>
-        
-        <Grid Margin="20" Grid.Column="1">
+        <Grid Background="{StaticResource MeoptaBlueBrush}">
+            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Background="Transparent">
+                <Grid Grid.Row="0">
+                    <Ellipse Style="{StaticResource GenderEllipseStyle}" Fill="{StaticResource MeoptaLightBlueBrush}" Width="120" Height="120" />
+                    <materialIcons:MaterialIcon Kind="FaceFemale" Foreground="White"  VerticalAlignment="Center" Height="80" HorizontalAlignment="Center"/>
+                </Grid>
+                <TextBlock Text="Lets get you set up" FontSize="25" Margin="0,20" FontWeight="Bold" Foreground="WhiteSmoke"/>
+                <TextBlock Text="it should only take a couple of minutes to registrate" TextAlignment="Center" TextWrapping="Wrap" Foreground="WhiteSmoke"/>
+            </StackPanel>
+        </Grid>
+
+
+        <Grid Margin="40" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -24,29 +96,61 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             
-            <Label Content="login to your account." 
+            <Label Content="Create account." 
                    FontSize="16" 
                    FontWeight="Bold" 
                    Foreground="Black" 
-                   HorizontalAlignment="Left" Margin="0,0,0,20"/>
-            
-            <TextBox Grid.Row="1" 
-                     Margin="30,10,30,10" 
-                     Height="30" 
-                     BorderThickness="0,0,0,1" 
-                     Style="{StaticResource PlaceHolderTextBox}" 
-                     h:TextBoxHelpers.CornerRadius="2"
-                     h:TextBoxHelpers.PlaceholderText="Email.." />
-            
-            <PasswordBox Grid.Row="2" 
-                         x:Name="PasswordBox" 
-                         Height="30"  
-                         Margin="30,10,30,10" 
-                         BorderThickness="0,0,0,1"/>
-            
-            <Button Grid.Row="3" Content="Log in" 
-                    Width="100" Margin="5,20, 5, 5"/>
+                   HorizontalAlignment="Left"/>
 
+            <StackPanel Grid.Row="1" HorizontalAlignment="Center">
+                
+                <TextBlock Text="Name" Style="{StaticResource BaseTextBlockStyle}" Margin="0,20,0,0"/>
+                <TextBox  Style="{StaticResource BaseTextBoxStyle}" />
+                <TextBlock Text="Surname" Style="{StaticResource BaseTextBlockStyle}" />
+                <TextBox  Style="{StaticResource BaseTextBoxStyle}"/>
+                <TextBlock Text="Date of Birth" Style="{StaticResource BaseTextBlockStyle}" />
+                <TextBox  Style="{StaticResource BaseTextBoxStyle}"/>
+                <TextBlock Text="Gender" Style="{StaticResource BaseTextBlockStyle}" />
+                
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <Grid Grid.Row="0" Margin="0,0,20,0">
+                        <Ellipse Style="{StaticResource GenderEllipseStyle}" Fill="{Binding IsMaleSelected, Converter={StaticResource GenderBrushConverter}}">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="MouseLeftButtonDown">
+                                    <i:InvokeCommandAction Command="{Binding SelectGenderCommand}" CommandParameter="Male"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </Ellipse>
+                        <materialIcons:MaterialIcon Kind="GenderMale" Foreground="White" VerticalAlignment="Center" Height="20" HorizontalAlignment="Center"/>
+                    </Grid>
+                    <Grid Grid.Row="0">
+                        <Ellipse Style="{StaticResource GenderEllipseStyle}" Fill="{Binding IsFemaleSelected, Converter={StaticResource GenderBrushConverter}}">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="MouseLeftButtonDown">
+                                    <i:InvokeCommandAction Command="{Binding SelectGenderCommand}" CommandParameter="Male"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </Ellipse>
+                        <materialIcons:MaterialIcon Kind="GenderFemale" Foreground="White"  VerticalAlignment="Center" Height="20" HorizontalAlignment="Center"/>
+                    </Grid>
+                </StackPanel>
+
+                <TextBlock Text="University" Style="{StaticResource BaseTextBlockStyle}" Margin="0,30,0,0" />
+                <TextBox  Style="{StaticResource BaseTextBoxStyle}"/>
+                <TextBlock Text="Faculty" Style="{StaticResource BaseTextBlockStyle}" />
+                <TextBox  Style="{StaticResource BaseTextBoxStyle}"/>
+                <TextBlock Text="Email" Style="{StaticResource BaseTextBlockStyle}"/>
+                <TextBox  Style="{StaticResource BaseTextBoxStyle}"/>
+
+                <TextBlock Text="Password" Style="{StaticResource BaseTextBlockStyle}" />
+                <PasswordBox x:Name="txtPassword" Width="300" Height="25" BorderThickness="0,0,0,1" FontSize="15"/>
+                
+                <StackPanel Orientation="Horizontal" Margin="0,40,0,0" HorizontalAlignment="Center" >
+                    <Button Content="Save" Style="{StaticResource SaveButtonStyle}"></Button>
+                    <Button Content="Cancel" Style="{StaticResource CancelButtonStyle}"></Button>
+                </StackPanel>
+                
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
