--- a/DiceMaster3600/View/LoginForm.xaml
+++ b/DiceMaster3600/View/LoginForm.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
-        mc:Ignorable="d"
+        mc:Ignorable="d"     
+        ResizeMode="NoResize"
         Title="LoginForm" >
 
     <Window.Resources>
@@ -25,8 +26,9 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Background gradient -->
@@ -45,10 +47,10 @@
             <TextBlock Text="LOGIN" Foreground="White" FontSize="18" Margin="0,70,0,0" HorizontalAlignment="Center"/>
         </Grid>
 
-        <Border Grid.Row="1" Background="White" CornerRadius="10" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="20" Margin="10,20,10,10">
+        <Border Grid.Row="1" Grid.RowSpan="2" Background="White" BorderThickness="1" BorderBrush="{StaticResource MeoptaBackgroundBrush}" CornerRadius="10" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="20" Margin="10,20,10,10">
             <StackPanel>
                 <TextBlock Text="Email" Foreground="{StaticResource MeoptaBackgroundBrush}" />
-                <TextBox x:Name="txtEmail" Width="200" Height="25" Text="abel@wpf.com" BorderThickness="0,0,0,1" FontSize="15" VerticalContentAlignment="Bottom" HorizontalAlignment="Left"/>
+                <TextBox x:Name="txtEmail" Width="200" Height="25" BorderThickness="0,0,0,1" FontSize="15" VerticalContentAlignment="Bottom" HorizontalAlignment="Left"/>
                 <TextBlock Text="Password" Foreground="{StaticResource MeoptaBackgroundBrush}" Margin="0,20,0,0" />
                 <PasswordBox x:Name="txtPassword" Width="200" Height="25" BorderThickness="0,0,0,1" FontSize="15"/>
                 <Button x:Name="btnLogin" Content="LOGIN"/>
