--- a/DiceMaster3600/View/Theme/ColoursTheme.xaml
+++ b/DiceMaster3600/View/Theme/ColoursTheme.xaml
@@ -7,6 +7,7 @@
 
     <!-- Complementary / Secondary Colors -->
     <Color x:Key="MeoptaBlue">#1A4C8C</Color>
+    <Color x:Key="MeoptaLightBlue">#4d95dc</Color>
     <Color x:Key="MeoptaBronze">#BEA04D</Color>
     <Color x:Key="MeoptaYellow">#E7B035</Color>
 
@@ -19,6 +20,7 @@
     <SolidColorBrush x:Key="MeoptaLogoBlackBrush" Color="{StaticResource MeoptaLogoBlack}"/>
     <SolidColorBrush x:Key="MeoptaLogoWhiteBrush" Color="{StaticResource MeoptaLogoWhite}"/>
     <SolidColorBrush x:Key="MeoptaBlueBrush" Color="{StaticResource MeoptaBlue}"/>
+    <SolidColorBrush x:Key="MeoptaLightBlueBrush" Color="{StaticResource MeoptaLightBlue}"/>
     <SolidColorBrush x:Key="MeoptaBronzeBrush" Color="{StaticResource MeoptaBronze}"/>
     <SolidColorBrush x:Key="MeoptaYellowBrush" Color="{StaticResource MeoptaYellow}"/>
 
@@ -28,7 +30,7 @@
     <SolidColorBrush x:Key="MeoptaDarkBackgroundBrush" Color="{StaticResource MeoptaDarkBackground}"/>
     
     <!-- Additional SolidColorBrushes for Background Colors -->
-    <SolidColorBrush x:Key="SidebarBackgroundColor" Color="#4d95dc"/>
+    
     <SolidColorBrush x:Key="TopBarBackgroundColor" Color="#506165"/>
     <SolidColorBrush x:Key="PrimaryButtonColor" Color="#f0f1f2"/>
     <SolidColorBrush x:Key="SecondaryButtonColor" Color="#ffffff"/>
