--- a/DiceMaster3600/View/HomeView.xaml
+++ b/DiceMaster3600/View/HomeView.xaml
@@ -7,14 +7,14 @@
              xmlns:controls="clr-namespace:DiceMaster3600.View.Controls"
              xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
              xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
+             d:DataContext="{d:DesignInstance Type=vm:HomeViewModel}"
              mc:Ignorable="d" Background="#ffffff">
 
-    <UserControl.DataContext>
-        <vm:HomeViewModel/>
-    </UserControl.DataContext>
-
     <Grid Margin="30">
+        
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -22,37 +22,67 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid >
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto" MinWidth="400"/>
+                <ColumnDefinition Width="Auto" MinWidth="300"/>
                 <ColumnDefinition Width="*" MinWidth="20"/>
-                <ColumnDefinition Width="Auto" MinWidth="400"/>
+                <ColumnDefinition Width="Auto" MinWidth="300"/>
                 <ColumnDefinition Width="*" MinWidth="20"/>
-                <ColumnDefinition Width="Auto" MinWidth="400"/>
+                <ColumnDefinition Width="Auto" MinWidth="300"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
+
+            <controls:InfoDisplayPanel TitleText="Best Player"
+                                   Grid.Column="1"
+                                   ValueText="{Binding Path=TopThreeList[0].WholeName}"
+                                   TargetGridBackground="{StaticResource MeoptaYellowBrush}"/>
+
             <controls:InfoDisplayPanel UnitText="Pt" 
                                    TitleText="Best Score"
-                                   ValueText="3600/1000" 
-                                   Grid.Column="1" 
-                                   TargetGridBackground="{StaticResource MeoptaYellowBrush}"/>
+                                   ValueText="{Binding TopThreeList[0].NumberOfPoints}" 
+                                   Grid.Column="3" 
+                                   TargetGridBackground="{StaticResource MeoptaBlueBrush}"/>
 
             <controls:InfoDisplayPanel UnitText="pt"
                                    TitleText="Avarage Score"
-                                   Grid.Column="3"       
+                                   Grid.Column="5"       
                                    ValueText="100030"
-                                   TargetGridBackground="{StaticResource MeoptaBlueBrush}"/>
-
-            <controls:InfoDisplayPanel TitleText="Best Player"
-                                   Grid.Column="5"
-                                   ValueText="Jaroslav Janků"
                                    TargetGridBackground="{StaticResource MeoptaBronzeBrush}"/>
+
         </Grid>
 
-        <lvc:CartesianChart Series="{Binding Series}" 
-                            Grid.Row="1"/>
+        <lvc:CartesianChart Grid.Row="1"  Series="{Binding Series}"/>
+        
+        <Grid Grid.Column="1" Grid.RowSpan="2"  >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Margin="20,0,0,0"
+                    BorderBrush="Black" 
+                    BorderThickness="1"
+                    CornerRadius="5">
+                <StackPanel>
+                    <TextBlock Text="Player list" Margin="10" FontSize="15" FontWeight="Bold"/>
+                    <TextBlock Text="This is a list of the top three players of all time." 
+                               TextWrapping="Wrap"
+                               HorizontalAlignment="Left"
+                               Width="180"
+                               Margin="10,0,10,0" 
+                               Foreground="{StaticResource MeoptaDarkBackgroundBrush}"/>
+                    <ListBox Name="UserListBox" Grid.Column="1" 
+                     BorderThickness="0"
+                     ItemTemplate="{StaticResource UserItemTemplate}" 
+                     ItemsSource="{Binding Path=TopThreeList}"/>
+                </StackPanel>
+
+            </Border>
+
+            <lvc:PieChart Grid.Column="1" 
+                          Grid.Row="2" 
+                          Series="{Binding TestPieGraphSeries}"/>
+        </Grid>
 
     </Grid>
 </UserControl>
