--- a/DiceMaster3600/View/LoginForm.xaml
+++ b/DiceMaster3600/View/LoginForm.xaml
@@ -3,8 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
-        mc:Ignorable="d"     
+        xmlns:vm="clr-namespace:DiceMaster3600.ViewModel"
+        xmlns:control="clr-namespace:DiceMaster3600.View.Controls"
+        mc:Ignorable="d" Width="300" Height="430"
+        WindowStartupLocation="CenterScreen"
+        d:DataContext="{d:DesignInstance Type=vm:LoginFormViewModel}"
         ResizeMode="NoResize"
         Title="LoginForm" >
 
@@ -27,11 +30,10 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1.3*"/>
+            <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
 
-        <!-- Background gradient -->
         <Rectangle Grid.RowSpan="2">
             <Rectangle.Fill>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
@@ -42,20 +44,49 @@
         </Rectangle>
 
         <Grid Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Ellipse Width="50" Height="50" Fill="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            <materialIcons:MaterialIcon Kind="Home" Foreground="#FF2196F3" VerticalAlignment="Center" Height="30" HorizontalAlignment="Center"/>
-            <TextBlock Text="LOGIN" Foreground="White" FontSize="18" Margin="0,70,0,0" HorizontalAlignment="Center"/>
+            <control:RoundedIcon IconKind="Home"
+                                 EllipseFill ="White"
+                                 IconForeground ="#FF2196F3"/>
+            <TextBlock Text="LOGIN" 
+                       Foreground="White" 
+                       FontSize="18" 
+                       Margin="0,70,0,0" 
+                       HorizontalAlignment="Center"/>
         </Grid>
 
         <Border Grid.Row="1" Grid.RowSpan="2" Background="White" BorderThickness="1" BorderBrush="{StaticResource MeoptaBackgroundBrush}" CornerRadius="10" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="20" Margin="10,20,10,10">
             <StackPanel>
-                <TextBlock Text="Email" Foreground="{StaticResource MeoptaBackgroundBrush}" />
-                <TextBox x:Name="txtEmail" Width="200" Height="25" BorderThickness="0,0,0,1" FontSize="15" VerticalContentAlignment="Bottom" HorizontalAlignment="Left"/>
-                <TextBlock Text="Password" Foreground="{StaticResource MeoptaBackgroundBrush}" Margin="0,20,0,0" />
-                <PasswordBox x:Name="txtPassword" Width="200" Height="25" BorderThickness="0,0,0,1" FontSize="15"/>
-                <Button x:Name="btnLogin" Content="LOGIN"/>
-                <TextBlock Text="Not a Member?" Foreground="#FF2196F3" HorizontalAlignment="Center" Cursor="Hand" Margin="0,10,0,0"/>
-                <Button BorderThickness="0" Padding="10,0"  HorizontalAlignment="Center" Content="Sing Up" Background="White" Foreground="#FF2196F3" Margin="0,3,0,0"/>
+                <TextBlock Text="Email" 
+                           Foreground="{StaticResource MeoptaBackgroundBrush}" />
+                <TextBox x:Name="txtEmail" 
+                         Width="200" Height="25" 
+                         BorderThickness="0,0,0,1" 
+                         FontSize="15" 
+                         VerticalContentAlignment="Bottom" 
+                         HorizontalAlignment="Left"/>
+                <TextBlock  Text="Password" 
+                            Foreground="{StaticResource MeoptaBackgroundBrush}" 
+                            Margin="0,20,0,0" />
+                <PasswordBox x:Name="txtPassword" 
+                             Width="200" 
+                             Height="25" 
+                             BorderThickness="0,0,0,1" 
+                             FontSize="15"/>
+                <Button x:Name="btnLogin" 
+                        Content="LOGIN"/>
+                <TextBlock Text="Not a Member?" 
+                           Foreground="#FF2196F3" 
+                           HorizontalAlignment="Center" 
+                           Cursor="Hand" 
+                           Margin="0,10,0,0"/>
+                <Button BorderThickness="0" 
+                        Padding="10,0"  
+                        Command="{Binding Path=SingUpCMD}"
+                        HorizontalAlignment="Center" 
+                        Content="Sing Up" 
+                        Background="White" 
+                        Foreground="#FF2196F3" 
+                        Margin="0,3,0,0"/>
             </StackPanel>
         </Border>
     </Grid>
