--- a/DiceMaster3600/View/Theme/UserItemTemplate.xaml
+++ b/DiceMaster3600/View/Theme/UserItemTemplate.xaml
@@ -4,9 +4,9 @@
                     xmlns:conv="clr-namespace:DiceMaster3600.View.Converters"
                     xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF">
 
-    <conv:IndexToColorConveter x:Key="ColorConverter"/>
+    <conv:PositionToColorConverter x:Key="ColorConverter"/>
     <DataTemplate x:Key="UserItemTemplate">
-        <Border Margin="5" Padding="10" BorderBrush="Gray" BorderThickness="1" CornerRadius="5">
+        <Border Margin="5" Padding="10" BorderBrush="Gray" CornerRadius="5">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -15,15 +15,13 @@
                 <Grid >
                     <Ellipse Width="50" Height="50" 
                              Stroke="DarkBlue"
-                             Fill="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem}, Converter={StaticResource ColorConverter}}"
+                             Fill="{Binding Position, Converter={StaticResource ColorConverter}}"
                              StrokeThickness="2">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="MouseLeftButtonDown">
-                                <i:InvokeCommandAction Command="{Binding SelectGenderCommand}" CommandParameter="Male"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
                     </Ellipse>
-                    <materialIcons:MaterialIcon Kind="Medal" Foreground="White"   VerticalAlignment="Center" Height="20" HorizontalAlignment="Center"/>
+                    <materialIcons:MaterialIcon Kind="Medal" Foreground="White" 
+                                                VerticalAlignment="Center" 
+                                                Height="20" 
+                                                HorizontalAlignment="Center"/>
                 </Grid>
                 <Grid Grid.Column="1" Margin="10,0,0,0">
                     <Grid.RowDefinitions>
@@ -31,11 +29,15 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <TextBlock Text="{Binding WholeName}" FontWeight="Bold"/>
-                    <StackPanel Grid.Row="1" Orientation="Horizontal">
-                        <TextBlock Text="Points: "/>
-                        <TextBlock Text="{Binding NumberOfPoints}" FontWeight="Bold"/>
-                        <TextBlock Text=" Zisk: "/>
-                        <TextBlock Text="{Binding Profit}" FontWeight="Bold"/>
+                    <StackPanel Grid.Row="1" Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Points: "/>
+                            <TextBlock Text="{Binding NumberOfPoints}" FontWeight="Bold"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="University: "/>
+                            <TextBlock Text="{Binding NumberOfPoints}" FontWeight="Bold"/>
+                        </StackPanel>
                     </StackPanel>
                 </Grid>
             </Grid>
